log
Wed 27 Sep 2023 09:43:24 PM UTC: 
 tests:  0|4
total_score: 0/70
aacc12b
Wed 27 Sep 2023 09:51:23 PM UTC: 
 heap.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:10: error: void value not ignored as it ought to be
   23 |   return (void)pq->heapArray { 0 }
      |          ^~~~~~~~~~~~~~~~~~~
heap.c:23:29: error: expected ‘;’ before ‘{’ token
   23 |   return (void)pq->heapArray { 0 }
      |                             ^~
      |                             ;
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4d20f1c
Wed 27 Sep 2023 09:53:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:39: error: expected ‘;’ before ‘}’ token
   23 |   return (void *)pq->heapArray[0].data
      |                                       ^
      |                                       ;
   24 | }
      | ~                                      
Compilation failed
d5629ff
Wed 27 Sep 2023 09:53:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
2262550
Wed 27 Sep 2023 09:53:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e41ea41
Wed 27 Sep 2023 09:59:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:26:57: error: expected ‘(’ before ‘}’ token
   26 | void heap_push(Heap *pq, void *data, int priority) { if }
      |                                                         ^
      |                                                         (
Compilation failed
9b73031
Thu 28 Sep 2023 01:42:41 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:28:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   28 |     pq->heapArray = (pq->capac * 2) + 1;
      |                   ^
heap.c:31:3: error: conversion to non-scalar type requested
   31 |   }
      |   ^
heap.c:30:71: error: expected ‘;’ before ‘}’ token
   30 |         (heapElem)realloc(pq->heapArray, sizeof(heapElem) * pq->capac)
      |                                                                       ^
      |                                                                       ;
   31 |   }
      |   ~                                                                    
cc1: all warnings being treated as errors
Compilation failed
4357673
Thu 28 Sep 2023 01:42:50 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:3: error: conversion to non-scalar type requested
   31 |   }
      |   ^
heap.c:30:71: error: expected ‘;’ before ‘}’ token
   30 |         (heapElem)realloc(pq->heapArray, sizeof(heapElem) * pq->capac)
      |                                                                       ^
      |                                                                       ;
   31 |   }
      |   ~                                                                    
Compilation failed
ab55c41
Thu 28 Sep 2023 01:43:07 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:73: error: expected ‘;’ before ‘}’ token
   30 |         (heapElem *)realloc(pq->heapArray, sizeof(heapElem) * pq->capac)
      |                                                                         ^
      |                                                                         ;
   31 |   }
      |   ~                                                                      
Compilation failed
601a390
Thu 28 Sep 2023 01:43:16 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ba12282
Thu 28 Sep 2023 01:52:12 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:1: error: expected expression before ‘}’ token
   37 | }
      | ^
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
In file included from test.c:4:
heap.c:36:7: error: unused variable ‘inf’ [-Werror=unused-variable]
   36 |   int inf =
      |       ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
00974c1
Thu 28 Sep 2023 01:52:42 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:7: error: unused variable ‘sup’ [-Werror=unused-variable]
   37 |   int sup = pq->size - 1;
      |       ^~~
heap.c:36:7: error: unused variable ‘inf’ [-Werror=unused-variable]
   36 |   int inf = pq->size;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
7e8b6ea
Thu 28 Sep 2023 02:09:36 AM UTC: 
 heap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
aae4812
Fri 06 Oct 2023 01:19:55 AM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:63:57: error: expected ‘)’ before ‘;’ token
   63 |   hp -> heapArray = (heapElem*)malloc(3*sizeof(heapElem);
      |                                      ~                  ^
      |                                                         )
heap.c:63:58: error: expected ‘;’ before ‘}’ token
   63 |   hp -> heapArray = (heapElem*)malloc(3*sizeof(heapElem);
      |                                                          ^
      |                                                          ;
   64 | }
      | ~                                                         
heap.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
67f4898
Fri 06 Oct 2023 01:20:02 AM UTC: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
617664b
